--- a/public_html/cart/HTML/assets/css/skin-3.css
+++ b/public_html/cart/HTML/assets/css/skin-3.css
@@ -12,19 +12,19 @@ a:hover, a:focus {
 	color: #2980b9;
 }
 .btn-primary, .btn-primary, .product:hover .add-fav:hover, .product:hover .add-fav.active {
-	background-color: #006;
+	background-color: #59cf53;
 	color: #FFFFFF;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open .dropdown-toggle.btn-primary, .pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
-	background-color: #c2c2c2;
-	border-color: #006;
-	color: #006;
+	background-color: #2169d5;
+	border-color: #fff;
+	color: #fff;
 }
 .btn-primary:active, .btn-primary.active, .open .dropdown-toggle.btn-primary {
 	background:  #2c88c5;
 }
 .navbar-tshop {
-	background:#006;
+	background:#072b42;
 }
 .navbar-top {
 	background:#2c88c5;
