--- a/public_html/template/css/your_style.css
+++ b/public_html/template/css/your_style.css
@@ -219,7 +219,7 @@ transform: scale(1.05);
 }
 
 .primary{
-background: #006 none repeat scroll 0% 0%;
+background: #59cf53 none repeat scroll 0% 0%;
 color: #FFF;
 border-color: #606060;
 }
@@ -234,7 +234,7 @@ border-color: #606060;
 }
 
 .backHome{
-	background: #006 none repeat scroll 0% 0%;
+	background: #59cf53 none repeat scroll 0% 0%;
 	color: #FFF;
 	border-color: #2086BF;
 	border-color: #1F496D;
